# InfoCLI

./: .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
benchmark/: CMakeLists.txt  main.cpp.in
benchmark/include/: getopt-compat.hxx.in
benchmark/src/: gnu.cxx.in  non-gnu.cxx.in
cmake/: BenchmarkUtils.cmake  Dependencies.cmake  Dependency.cmake  FeatureTests.cmake  GetGit.cmake  GetSVN.cmake  GetTar.cmake  GetURL.cmake  InfoCLIConfig.cmake.in  Utils.cmake  Warnings.cmake
docs/: CMakeLists.txt  SpecializationEndpoints.md
docs/src/: Installation.dox  Manual.dox  Tutorial_0.dox  Tutorial_1.dox  Tutorial_2.dox  Tutorial_3.dox  Tutorial_4.dox
docs/theme/: custom.css  dark.css  footer.html  header.html
examples/: CMakeLists.txt  README.md
examples/example1-basic-usage/: CMakeLists.txt  doc.md  main.cpp
examples/example2-auto-help/: CMakeLists.txt  doc.md  main.cpp
examples/example3-callback-functions/: CMakeLists.txt  doc.md  main.cpp
examples/example4-custom-types/: CMakeLists.txt  doc.md  main.cpp  my_type.cpp  my_type.hpp
examples/example5-aggregating-types/: CMakeLists.txt  doc.md  main.cpp
examples/example5-aggregating-types/compiler/: compiler.hpp
include/info/: cli.hpp  cli.hxx
include/info/cli/: aggregator.hpp  aggregator.hxx  cli_parser.hpp  cli_parser.hxx  dissector.hpp  error_reporter.hpp  help_generator.hpp  macros.hxx  matcher.hpp  meta.hpp  meta_split.hpp  option.hpp  option.hxx  parse_exception.hpp  phmap.hpp  repeat.hxx  specialize.hpp  split.hpp  tlist.hpp  type_data.hpp  type_hash.hpp  type_parser.hpp  val_callback.hpp
include/info/cli/exc/: bad_option_value.hxx  callback_error.hxx  no_such_option.hxx
include/info/cli/extra/: repeat.hxx
include/info/cli/meta/: dissector.hxx  meta.hxx  type_name.hxx
include/info/cli/parallel_hashmap/: NOTICE.txt
include/info/cli/types/: type_data.hxx  type_modifier.hxx  type_parser.hxx
src/: cli_parser.cpp  cli_parser.cxx  fmt.hpp  help_generator.cpp  option.cxx  parse_exception.cpp  split.cpp  type_parser.cpp
src/exc/: bad_option_value.cxx  callback_error.cxx  no_such_option.cxx
src/impl/: helpful_option_builder.cxx  option_builder.cxx
src/types/: type_data.cxx  type_parser.cxx
test/: CMakeLists.txt  test.cli_parser.cpp  test.dissector.cpp  test.main.cpp  test.matcher.cpp  test.option.cpp  test.split.cpp  test.type_parser.cpp  test.val_callback.cpp  type_equality.hpp
test/include/: type_equality.hxx
test/src/: cli_parser.cxx  cli_parser.long.cxx  cli_parser.packed.cxx  cli_parser.unpacked.cxx  dissector.cxx  main.cxx  option.cxx  option_builder.cxx  type_parser.cxx
